--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-streamlit
-openai
+streamlit>=1.20
 requests
-anthropic
+PyPDF2
+python-docx
+chardet
+sentence-transformers
+scikit-learn
+numpy
+sqlalchemy
+alembic
